--- a/css/styles.css
+++ b/css/styles.css
@@ -4152,6 +4152,7 @@ figcaption {
   overflow: hidden;
 }
 
+.video-container video,
 .video-container iframe {
   position: absolute;
   top: 0;
@@ -4318,33 +4319,32 @@ figcaption {
   font-size: 20px;
 }
 
-.drone-recommend-dis-container{
-
+.drone-recommend-dis-container {
 }
 
-.drone-recommend-dis-container .drone-recommend-dis-icon{
+.drone-recommend-dis-container .drone-recommend-dis-icon {
   align-self: auto;
 }
 
-.drone-recommend-dis{
+.drone-recommend-dis {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 32px;
 }
 
-.drone-recommend-dis img{
+.drone-recommend-dis img {
   border-radius: 15px;
   height: 150px;
 }
 
-.drone-recommend-dis-part{
+.drone-recommend-dis-part {
   display: flex;
   gap: 32px;
   align-items: center;
 }
 
-.drone-recommend-dis-part img{
+.drone-recommend-dis-part img {
   height: 100px;
   border-radius: 15px;
 }
