--- a/css/styles.css
+++ b/css/styles.css
@@ -2105,10 +2105,16 @@ figcaption {
   right: 0%;
 }
 
+.home_feature_image-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
 .home_feature_image {
   border-radius: 15px;
-  width: 100%;
-  height: 100%;
+  width: 70%;
+  height: 70%;
 }
 
 .home_feature_component {
