--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,11 @@
   --base-color-brand--white: white;
   --border-color--border-primary: var(--base-color-brand--white);
   --base-color-neutral--white: white;
-  --base-color-neutral--neutral-darker: #222;
+  --base-color-neutral--neutral-darker: #222222;
   --black-archive\<deleted\|variable-dccb7db6\>: black;
   --white-archive\<deleted\|variable-1766b841\>: white;
-  --base-color-neutral--neutral-darkest: #111;
-  --base-color-neutral--neutral-dark: #444;
+  --base-color-neutral--neutral-darkest: #222222;
+  --base-color-neutral--neutral-dark: #222222;
   --background-color--background-secondary: var(
     --base-color-neutral--neutral-darker
   );
@@ -36,7 +36,7 @@
   --base-color-brand--black: black;
   --base-color-neutral--neutral-lighter: #ccc;
   --base-color-neutral--neutral-light: #aaa;
-  --base-color-neutral--neutral: #666;
+  --base-color-neutral--neutral: #222222;
   --base-color-system--success-green: #027a48;
   --base-color-system--success-green-light: #ecfdf3;
   --base-color-system--error-red: #b42318;
@@ -45,6 +45,10 @@
   --border-color--border-secondary: var(--base-color-neutral--neutral-light);
   --border-color--border-alternate: var(--base-color-neutral--white);
   --link-color--link-secondary: var(--base-color-neutral--neutral-light);
+  --primary-color: #222222;
+  --secondary-color: #222222;
+  --text-color: #222222;
+  --background-color: #222222;
 }
 
 .w-layout-grid {
@@ -82,7 +86,7 @@
 }
 
 .w-checkbox-input--inputType-custom {
-  border: 1px solid #ccc;
+  border: 1px solid #222222;
   border-radius: 2px;
   width: 12px;
   height: 12px;
@@ -102,8 +106,8 @@
 }
 
 body {
-  background-color: var(--background-color--background-primary);
-  color: var(--text-color--text-primary);
+  background-color: var(--background-color);
+  color: var(--text-color);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans,
     sans-serif;
@@ -164,7 +168,8 @@ p {
 }
 
 a {
-  color: var(--link-color--link-primary);
+  /* color: var(--link-color--link-primary); */
+  color: var(--text-color);
   text-decoration: underline;
 }
 
@@ -690,7 +695,7 @@ figcaption {
 }
 
 .padding-vertical.padding-xxlarge {
-  color: var(--base-color-brand--white);
+  color: var(--text-color);
   padding-left: 0;
   padding-right: 0;
 }
@@ -873,7 +878,8 @@ figcaption {
 }
 
 .heading-style-h1 {
-  color: var(--base-color-brand--white);
+  /* color: var(--base-color-brand--white); */
+  color: var(--text-color);
   border: 0 solid #fff;
   font-size: 3.5rem;
   font-weight: 700;
@@ -923,18 +929,18 @@ figcaption {
 .button,
 .button-2 {
   padding: 0.8em 1.8em;
-  border: 2px solid #00b526;
+  border: 2px solid var(--primary-color);
   border-radius: 15px;
   position: relative;
   overflow: hidden;
-  background-color: #00b526;
+  background-color: var(--primary-color);
   text-align: center;
   text-transform: uppercase;
   font-size: 16px;
   transition: 0.3s;
   z-index: 1;
   font-family: inherit;
-  /* color: #00b526; */
+  color: var(--text-color) !important;
 }
 
 .button::before,
@@ -946,7 +952,7 @@ figcaption {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(45deg);
-  background: #222222;
+  background: var(--background-color);
   transition: 0.5s ease;
   display: block;
   z-index: -1;
@@ -959,7 +965,8 @@ figcaption {
 
 .button:hover,
 .button:hover {
-  color: #fff;
+  color: var(--text-color) !important;
+  background-color: transparent;
 }
 
 .button.is-link {
@@ -990,15 +997,16 @@ figcaption {
   display: flex;
 }
 
-/* .button.is-secondary {
-  color: var(--base-color-brand--white);
-  background-color: rgba(0, 0, 0, 0);
+.button.is-secondary {
+  background-color: transparent;
+  color: var(--text-color) !important;
+  border: 1px solid var(--primary-color);
 }
 
-.button.is-secondary.is-alternate {
-  color: var(--base-color-neutral--white);
-  background-color: rgba(0, 0, 0, 0);
-} */
+.button.is-secondary:hover {
+  color: var(--text-color);
+  background-color: var(--primary-color);
+}
 
 .button.is-small {
   padding: 0.5rem 1.25rem;
@@ -1015,7 +1023,7 @@ figcaption {
   border-bottom-color: var(--base-color-neutral--white);
   border-left-color: var(--base-color-neutral--white);
   color: var(--base-color-brand--white);
-  background-color: #00b526;
+  background-color: var(--primary-color);
   border-radius: 15px;
 }
 
@@ -1134,9 +1142,9 @@ figcaption {
 }
 
 .form_input {
-  border: 1px solid var(--base-color-brand--white);
-  background-color: var(--base-color-neutral--neutral-darker);
-  color: var(--text-color--text-primary);
+  border: 1px solid var(--text-color);
+  background-color: var(--background-color);
+  color: var(--text-color);
   border-radius: 0;
   height: auto;
   min-height: 2.75rem;
@@ -1151,7 +1159,8 @@ figcaption {
 }
 
 .form_input::placeholder {
-  color: rgba(254, 254, 254, 0.6);
+  color: var(--text-color);
+  opacity: 0.5;
 }
 
 .form_input.is-text-area {
@@ -1540,7 +1549,7 @@ figcaption {
 }
 
 .padding-global {
-  background-color: #222;
+  background-color: var(--background-color);
   padding-left: 5%;
   padding-right: 5%;
 }
@@ -1793,7 +1802,7 @@ figcaption {
 
 .navbar5_component {
   border-bottom: 0px solid var(--border-color--border-primary);
-  background-color: var(--base-color-neutral--neutral-darker);
+  background-color: var(--background-color);
   align-items: center;
   width: 100%;
   min-height: 4.5rem;
@@ -1967,7 +1976,8 @@ figcaption {
 }
 
 .navbar5_link {
-  color: var(--link-color--link-primary);
+  /* color: var(--link-color--link-primary); */
+  color: var(--text-color);
   padding: 1.5rem 1rem;
   position: relative;
   overflow: hidden;
@@ -1981,13 +1991,13 @@ figcaption {
   bottom: -100%;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to top, #00b526, #00b526);
+  background: linear-gradient(to top, var(--primary-color), var(--primary-color));
   transition: bottom 0.3s ease;
   z-index: -1;
 }
 
 .navbar5_link:hover {
-  color: #ffffff;
+  color: var(--text-color);
 }
 
 .navbar5_link:hover::before {
@@ -1995,13 +2005,14 @@ figcaption {
 }
 
 .navbar5_link.w--current {
-  color: #00b526;
-  border-bottom: 1px solid #00b526;
+  color: var(--primary-color);
+  border-bottom: 1px solid var(--primary-color);
 }
 
 .navbar5_link.w--current:hover {
-  color: #ffffff;
-  border-bottom: 1px solid #00b526;
+  /* color: #ffffff; */
+  color: var(--text-color);
+  border-bottom: 1px solid var(--primary-color);
 }
 
 .navbar5_logo-link {
@@ -2097,7 +2108,7 @@ figcaption {
 
 .home_hero-header_background-image-wrapper {
   z-index: -1;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); */
   position: absolute;
   top: 0%;
   bottom: 0%;
@@ -2335,7 +2346,8 @@ figcaption {
 .footer1_social-link {
   grid-column-gap: 0.75rem;
   grid-row-gap: 0.75rem;
-  color: var(--link-color--link-primary);
+  /* color: var(--link-color--link-primary);   */
+  color: var(--text-color);
   justify-content: flex-start;
   align-items: center;
   padding-top: 0.5rem;
@@ -2359,7 +2371,8 @@ figcaption {
 }
 
 .footer1_link {
-  color: var(--link-color--link-primary);
+  /* color: var(--link-color--link-primary); */
+  color: var(--text-color);
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   font-size: 0.875rem;
@@ -2372,7 +2385,8 @@ figcaption {
 }
 
 .footer1_legal-link {
-  color: var(--link-color--link-primary);
+  /* color: var(--link-color--link-primary); */
+  color: var(--text-color);
   font-size: 0.875rem;
   text-decoration: underline;
 }
@@ -2578,7 +2592,8 @@ figcaption {
 }
 
 .navbar5_link-2 {
-  color: var(--link-color--link-primary);
+  /* color: var(--link-color--link-primary); */
+  color: var(--text-color);
   padding: 1.5rem 1rem;
 }
 
@@ -2787,7 +2802,8 @@ figcaption {
 .footer1_social-link-2 {
   grid-column-gap: 0.75rem;
   grid-row-gap: 0.75rem;
-  color: var(--link-color--link-primary);
+  /* color: var(--link-color--link-primary); */	
+  color: var(--text-color);
   align-items: center;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -2801,12 +2817,14 @@ figcaption {
 }
 
 .navbar5_link-3 {
-  color: var(--link-color--link-primary);
+  /* color: var(--link-color--link-primary); */
+  color: var(--text-color);
   padding: 1.5rem 1rem;
 }
 
 .navbar5_link-3.w--current {
-  color: var(--base-color-neutral--black);
+  /* color: var(--base-color-neutral--black); */
+  color: var(--text-color);
 }
 
 .icon-embed-xsmall-3 {
@@ -2956,7 +2974,8 @@ figcaption {
 .footer1_social-link-3 {
   grid-column-gap: 0.75rem;
   grid-row-gap: 0.75rem;
-  color: var(--link-color--link-primary);
+  /* color: var(--link-color--link-primary); */
+  color: var(--text-color);
   align-items: center;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -4227,23 +4246,23 @@ figcaption {
 }
 
 .section_home_testimonial .my-slider-progress {
-  background: #222222;
+  background: var(--background-color);
   height: 2px;
   width: 80%;
 }
 
 .section_home_testimonial .my-slider-progress-bar {
-  background: #00b526;
+  background: var(--primary-color);
   height: 2px;
   transition: width 400ms ease;
   width: 0;
 }
 
 .section_home_testimonial .custom-button {
-  background-color: #00b526;
+  background-color: var(--primary-color);
   border-radius: 30px;
   border: none;
-  color: white;
+  color: var(--text-color);
   height: 50px;
   width: 50px;
   position: absolute;
@@ -4257,11 +4276,11 @@ figcaption {
 
 .section_home_testimonial .custom-button {
   /* padding: 0.8em 1.8em; */
-  border: 2px solid #00b526;
+  border: 2px solid var(--primary-color);
   border-radius: 15px;
   position: relative;
   overflow: hidden;
-  background-color: #00b526;
+  background-color: var(--primary-color);
   text-align: center;
   text-transform: uppercase;
   font-size: 16px;
@@ -4270,10 +4289,9 @@ figcaption {
   font-family: inherit;
   /* color: #00b526; */
 
-  background-color: #00b526;
   border-radius: 30px;
   /* border: none; */
-  color: white;
+  color: var(--text-color);
   height: 50px;
   width: 50px;
   position: absolute;
@@ -4353,4 +4371,10 @@ figcaption {
 .drone-recommend-dis-part img {
   height: 100px;
   border-radius: 15px;
+}
+
+/* Backend: */
+
+.backend-card-title {
+  color: var(--text-color);
 }
